fix dark mode shadow

--- a/app/components/_shared/see-all/see-all.module.scss
+++ b/app/components/_shared/see-all/see-all.module.scss
@@ -13,7 +13,7 @@
       position: absolute;
       bottom: 0;
       width: 100%;
-      background: linear-gradient(0deg, #FFF 0%, rgba(255, 255, 255, 0.00) 100%);
+      background: linear-gradient(0deg, var(--theme-card-background) 0%, rgba(255, 255, 255, 0.00) 100%);
     }
 
     &__opened {
